--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>Práctica de Examen</h1>
+    <h1>Quiz Patente</h1>
     
     <div id="quiz-container">
         <p id="question-text"></p>
