--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <h1>Práctica de Examdddd sdfen</h1>
+    <h1>Práctica de Examen</h1>
     <input type="file" id="pdf-upload" accept="application/pdf">
     
     <div id="quiz-container">
